src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParameters_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParameters_StringErrorContext.class */
public final class EXTGPUProgramParameters_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglProgramEnvParameters4fvEXT(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParametersErrorContext");
        methods.put("glProgramEnvParameters4fvEXT(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParametersErrorContext");
        methods.put("nglProgramLocalParameters4fvEXT(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParametersErrorContext");
        methods.put("glProgramLocalParameters4fvEXT(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParametersErrorContext");
        methods.put("glProgramEnvParameters4fvEXT(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParametersErrorContext");
        methods.put("glProgramLocalParameters4fvEXT(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGPUProgramParametersErrorContext");
        return methods;
    }
}
